--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -48,7 +48,7 @@ repos:
         name: update-model-index
         description: Collect model information and update model-index.yml
         entry: .dev/md2yml.py
-        additional_dependencies: [mmcv, lxml]
+        additional_dependencies: [mmcv, lxml, opencv-python]
         language: python
         files: ^configs/.*\.md$
         require_serial: true
